<resources>
    <string name="app_name">AbacusAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="i_am_a">I am a</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="student_id">Student ID</string>
    <string name="enroll_date">Enroll Date</string>
    <string name="address">Enter Address</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_father_name">Enter Father name</string>
    <string name="enter_mother_name">Enter Mother name</string>
    <string name="franchise">Franchise</string>
    <string name="franchise_id">Franchise ID</string>
    <string name="contact_number">Contact No.</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_date_hint">Enter date in DD-MM-YYYY format</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registered_date">Registered date</string>
    <string name="approved_date">Approved date</string>
    <string name="father_name">Father name</string>
    <string name="program">Program</string>
    <string name="ma">MA</string>
    <string name="aa">AA</string>
    <string name="cost">Cost</string>
    <string name="admission_fee">Admission (1300)</string>
    <string name="level_500">Level (500)</string>
    <string name="level">Level</string>
    <string name="mother_name">Mother name</string>
    <string name="items">Items</string>
    <string name="pencil">Pencil</string>
    <string name="bag">Bag</string>
    <string name="abacus">Abacus</string>
    <string name="listening_ability">Listening Ability</string>
    <string name="progress_card">Progress Card</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="size_8">T-Shirt Size 8</string>
    <string name="size_12">T-Shirt Size 12</string>
    <string name="size_16">T-Shirt Size 16</string>
    <string name="books">Books</string>
    <string name="certificate">Certificate</string>
    <string name="graduate">Graduate</string>
    <string name="master">Master</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="students">Students</string>
    <string name="stocks">Stocks</string>
    <string name="order">Order</string>
    <string name="current_level">Current Level</string>
    <string name="select_books">Select books</string>
    <string name="select_certificate">Select a Certificate</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="approve">Approve</string>
    <string name="in_stock">In Stock:</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update_stock">Update Stock</string>
    <string name="enter_no_of_items_to_add_remove">Enter no. of items to Add/Remove</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="qty">Qty</string>
    <string name="sales_qty">Sales Qty</string>
    <string name="stock_qty">Stock Qty</string>
    <string name="purchase_qty">Purchase Qty</string>
    <string name="franchises">Franchises</string>
    <string name="approved">Approved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="t_no">Txn No.</string>
    <string name="choose_your_filter">Choose your filter</string>
    <string name="apply">Apply</string>
    <string name="clear_filter">Clear</string>
    <string name="search_here">Search by Name, ID, Franchise..</string>
    <string name="item">Item</string>
    <string name="future_level">Future Level</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="enter_vendor_name">Enter Vendor Name</string>
    <string name="owner">Owner</string>
    <string name="student">Student</string>
    <string name="enroll">Enroll</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="items_added_cart">Items added to cart</string>
    <string name="items_removed_cart">Items removed from cart</string>
    <string name="cart">Cart</string>
    <string name="speed_writing_book">Speed writing book</string>
    <string name="order_type">Order Type</string>
    <string name="damage">Damage</string>
    <string name="re_issue">Re issue</string>
    <string name="damage_date">Damage date</string>
    <string name="requested_by">Requested by</string>
    <string name="description">Description</string>
    <string name="payment_type">Payment type</string>
    <string name="free">Free</string>
    <string name="cash">Cash</string>
    <string name="amount_received">Amount received</string>
    <string name="amount_date">Amount date</string>
    <string name="order_date">Order date</string>
    <string name="order_history">Order History</string>
    <string name="from_level">From Level</string>
    <string name="to_level">To Level</string>
    <string name="pending_order">Close Pending Orders</string>
</resources>