<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary"
    android:orientation="horizontal"
    android:paddingVertical="1dp"
    android:weightSum="3">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/sp_16" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/from_level"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/sp_16" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:id="@+id/tv_to"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/to_level"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/sp_16" />

</androidx.appcompat.widget.LinearLayoutCompat>
