<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textfield_height"
            android:background="@color/color_primary"
            android:gravity="center"
            android:text="@string/choose_your_filter"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/sp_state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textfield_height"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/bordered_grey_bg"
            android:minHeight="@dimen/textfield_height"
            tools:listitem="@layout/user_type_item" />

        <Spinner
            android:id="@+id/sp_franchise"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textfield_height"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/bordered_grey_bg"
            android:minHeight="@dimen/textfield_height"
            tools:listitem="@layout/user_type_item" />

        <Spinner
            android:id="@+id/sp_students"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textfield_height"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/bordered_grey_bg"
            android:minHeight="@dimen/textfield_height"
            tools:listitem="@layout/user_type_item" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/medium_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:minHeight="0dp"
                android:text="@string/apply"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:minHeight="0dp"
                android:text="@string/clear_filter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>